--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
 <p>Hello World!!!</p>
 <img src="Nativity_tree.jpg" alt="Chicago" height="100" width="100">
+<ul>
+	<li>One</li>
+	<li>Two</li>
+	<li>Three</li>
+</ul>
 </body>
 </html>
